--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "react-scripts": "1.0.14"
   },
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "16.3.0",
+    "react-dom": "16.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
